fluxcd/live/prod/public/redirect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect
  annotations:
    kubernetes.io/tls-acme: true
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: inoa-redirect@file
spec:
  ingressClassName: traefik
  rules:
    - host: inoa.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: documentation
                port:
                  name: http
    - host: www.inoa.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: documentation
                port:
                  name: http
  tls:
    - hosts: [inoa.io, www.inoa.io]
      secretName: inoa-tls
